--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     "react": "https://esm.sh/react@^19.2.1",
     "three": "https://esm.sh/three@^0.182.0",
     "@react-three/drei": "https://esm.sh/@react-three/drei@^10.7.7",
-    "@react-three/fiber": "https://esm.sh/@react-three/fiber@^9.4.2"
+    "@react-three/fiber": "https://esm.sh/@react-three/fiber@^9.4.2",
+    "@google/genai": "https://esm.sh/@google/genai@^1.33.0"
   }
 }
 </script>
